<resources>
    <string name="app_name">AboutMe</string>
    <string name="nombre">[ ** EDUARDO LARRAIN URZUA ** ]</string>
    <string name="bioTitulo">[ ** BIOGRAFIA ** ]</string>
    <string name="bioDes">¡Hola! Soy Eduardo Larrain, un apasionado desarrollador y
        estudiante con una amplia experiencia en diversas áreas de la informática.
        A lo largo de mi trayectoria, he enfrentado y superado numerosas adversidades,
        lo que me ha brindado una mentalidad resiliente y una sed constante de aprendizaje.</string>
    <string name="lenguajes">[ ** JAVA {Student} / KOTLIN  {Student} ** ]</string>
    <string name="lenguajesDes">[ ** dev: C++/ VB6 / SQL / ARDUINO ** ]</string>

    <string name="experiencia">[ ** ACERCA DE MI  ** ]</string>
    <string name="experienciaDes"> Me gusta estar al tanto de las últimas tendencias tecnológicas
        y siempre estoy buscando oportunidades para aprender y experimentar con nuevas tecnologías.
        Me fascina la robótica y el Internet de las cosas (IoT) debido a su capacidad para combinar
        la tecnología y la innovación para crear soluciones inteligentes y automatizadas.</string>
    <string name="btnSalir">Salir</string>
    <string name="btnContactar">Contactar</string>
    <string name="tituloLenguaje"> [** Lenguajes de Programación **]</string>
    <string name="titulo1">[** C++ **]</string>
    <string name="titulo2">[** SQL **]</string>
    <string name="titulo3">[** IOT **]</string>
    <string name="titulo4">[** VB6 **]</string>
    <string name="titulo5">[** JAVA **]</string>
    <string name="contacto">[** REDES **]</string>
    <string name="escribeme">[** ESCRIBEME **]</string>
    <string name="inputMensaje">Ingresa tu mensaje</string>
    <string name="btnSubmit">Enviar</string>
    <string name="btnvolver">Volver</string>

</resources>