<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactoActivity">

    <ImageView
        android:id="@+id/fondoImg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/fondo" />

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="148dp"
        android:layout_height="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondoImg"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/eduardook" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/tituloLenguaje"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/div1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fondoImg"
        app:layout_constraintVertical_bias="0.7" />



        <LinearLayout
            android:id="@+id/div1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fondoImg"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/txtContentTitulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/red"
                android:rating="4" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/div2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div1"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/txtContent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingSQL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/red"
                android:rating="4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/div3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div2"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/txtContent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingIOT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/red"
                android:rating="5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/div4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div3"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/txtContent4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingVB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/red"
                android:rating="5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/div5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div4"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/txtContent5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingJAVA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/red"
                android:rating="3" />
        </LinearLayout>




    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/contacto"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.58"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.01">


        <ImageButton
            android:id="@+id/btnWhatsApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/whatsapp" />

        <ImageButton
            android:id="@+id/btnGitHub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/github" />

        <ImageButton
            android:id="@+id/btnLinkedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/linkedin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/imgMail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:srcCompat="@drawable/correo_electronico" />


        <TextView
            android:id="@+id/txtContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escribeme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtMsg"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/inputMensaje"
            android:gravity="start|top"
            android:inputType="textMultiLine" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/btnvolver" />
            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/btnSubmit" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>